--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/main.jsx"></script>
 
     <link rel="icon" type="image/svg+xml" href="/react_initaitive/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
